<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:padding="16dp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="16dp"
        android:rowCount="6">

        <!-- First Column -->
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorRed"
            android:text="@string/bankruptcy_law"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorOrange"
            android:text="@string/business_law"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorYellow"
            android:text="@string/constitutional_law"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorGreen"
            android:text="@string/criminalDefence_law"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorBlue"
            android:text="@string/employmentLabor_law" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorPurple"
            android:text="@string/entertainment_law" />

        <!-- Second Column -->

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorPurple"
            android:text="@string/estatePlanning_law" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorBlue"
            android:text="@string/family_law" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorGreen"
            android:text="@string/immigration_law"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorYellow"
            android:text="@string/intellectualProperty_law"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorOrange"
            android:text="@string/personalInjury_law"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/buttonColorRed"
            android:text="@string/tax_law"
            android:textColor="@android:color/black"/>
    </GridLayout>

    <!-- Bottom Row of Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/back_button"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/home_button"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/forward_button"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    </LinearLayout>
